--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1900,17 +1900,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cuenta = Cuenta(2, 10) \n",
     "print(cuenta.saldo_mxn)  "
@@ -1967,12 +1959,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(c.area)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Decorador `@deleter`\n",
     "\n",
-    "El método @deleter es parte de @property y se usa para definir qué sucede cuando se elimina un atributo de un objeto con del.\n",
+    "El método @deleter es parte de @property y se usa para definir qué sucede cuando se elimina un atributo de un objeto con la instrucción `del`.\n",
     "\n"
    ]
   },
@@ -1980,7 +1981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cuando usas `@property`, defines un *getter* para obtener el valor de un atributo, y con `@setter` controlas cómo se modifica. Si agregas `@deleter`, defines qué hacer cuando se usa `del objeto.atributo`.\n",
+    "Cuando usas `@property`, defines un *getter* para obtener el valor de un atributo, y con `@setter` controlas cómo se modifica cuando se le asigna un valor. Si agregas `@deleter`, defines qué hacer cuando se usa la instrucción: `del objeto.atributo`.\n",
     "\n"
    ]
   },
@@ -2014,6 +2015,7 @@
     "            self._saldo = nuevo_saldo\n",
     "        else:\n",
     "            raise ValueError(\"El saldo no puede ser negativo ni un valor inválido\")\n",
+    "        \n",
     "    @saldo.deleter\n",
     "    def saldo(self):\n",
     "        print(f\"Eliminando el saldo de la cuenta\")\n",
@@ -2054,6 +2056,13 @@
    "outputs": [],
    "source": [
     "print(cuenta.saldo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -2122,7 +2131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Así como el constructor, `__init__`, existen diversos métodos especiales que, si están definidos en nuestra clase, Python los llamará por nosotros cuando se utilice una instancia en situaciones particulares.\n",
+    "Así como el constructor, `__init__`, existen diversos ***métodos especiales*** que, si están definidos en nuestra clase, Python los llamará por nosotros cuando se utilice una instancia en situaciones particulares.\n",
     "\n"
    ]
   },
@@ -2130,24 +2139,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los **métodos especiales** en Python (también llamados ***dunder methods***, por ***double underscore***, es decir, `__nombre__`) son funciones que permiten definir comportamientos personalizados en las clases.\n",
+    "Los **métodos especiales** en Python (también conocidos como ***métodos mágicos*** o   ***dunder methods*** doble guion bajo __ antes y después `__nombre__`) permiten definir comportamientos especiales en las clases, como la forma en que se imprimen, comparan o manipulan sus objetos\n",
     "\n",
     "* Personalizar la impresión de objetos\n",
     "  \n",
     "* Operaciones matemáticas entre objetos\n",
     "  \n",
-    "* Comparaciones (==, >, <, >=, <=) entre otros\n",
+    "* Comparaciones ($==, >, <, >=, <=$) entre otros\n",
     "\n",
     "Todos los métodos especiales comienzan y terminan con `__doble_guion_bajo__`.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2187,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,15 +2237,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-6, 18)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = Punto(-6,18)\n",
     "print(p)\n"
@@ -2251,20 +2245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'(-6, 18)'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str(p)"
    ]
@@ -2274,6 +2257,47 @@
    "metadata": {},
    "source": [
     "Vemos que internamente Python invoca al método `__str__` cuando se le pide que imprima una variable de la clase `Punto`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Seguro:\n",
+    "    def __init__(self, titular, monto, prima):\n",
+    "        self.titular = titular\n",
+    "        self.monto = monto\n",
+    "        self.prima = prima\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Seguro de {self.titular}: Monto asegurado ${self.monto}, Prima anual ${self.prima}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seguro de Ana López: Monto asegurado $300000, Prima anual $1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "seguro1 = Seguro(\"Ana López\", 300000, 1000)\n",
+    "print(seguro1)  "
    ]
   },
   {
@@ -2319,6 +2343,13 @@
    "metadata": {},
    "source": [
     "Si queremos que este operador (o el equivalente para la suma) funcione, será necesario implementar algunos métodos especiales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
    ]
   },
   {
@@ -2412,7 +2443,63 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Representación en string: __str__\n",
+    "\n",
+    "Se usa cuando se quiere imprimir el objeto de forma legible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Poliza:\n",
+    "    def __init__(self, monto):\n",
+    "        self.monto = monto\n",
+    "\n",
+    "    def __add__(self, otro):\n",
+    "        return Poliza(self.monto + otro.monto)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Póliza con monto asegurado: ${self.monto}\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = Poliza(100000)\n",
+    "p2 = Poliza(200000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Póliza con monto asegurado: $300000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2425,31 +2512,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Métodos mágicos o métodos de operador"
+    "###  Operadores `+,-,*,/, == `"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En Python, el ***sobrecargo de operadores*** se logra mediante la implementación de métodos especiales en las clases, conocidos como **métodos de operador** o **métodos mágicos**. Estos métodos tienen nombres especiales que comienzan y terminan con doble guion bajo (por ejemplo, `__add__` para el operador de suma)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Enseguida algunos ejemplos de métodos mágicos utilizados para sobrecargar operadores en Python:\n",
-    "\n",
     "* `__add__(self, other):` Define el comportamiento para el operador de suma (`+`).\n",
     "  \n",
     "* `__sub__(self, other):` Define el comportamiento para el operador de resta (`-`).\n",
     "  \n",
     "* `__mul__(self, other):` Define el comportamiento para el operador de multiplicación `(*`).\n",
     "  \n",
-    "* `__truediv__(self, other):` Define el comportamiento para el operador de división (`/`).\n",
-    "  \n",
-    "* `__eq__(self, other):` Define el comportamiento para el operador de igualdad (`==`)."
+    "* `__truediv__(self, other):` Define el comportamiento para el operador de división (`/`)."
    ]
   },
   {
@@ -2457,6 +2533,172 @@
    "metadata": {},
    "source": [
     "La sobrecarga de operadores proporciona flexibilidad y permite que tus clases personalizadas se comporten de manera más intuitiva cuando se utilizan con operadores estándar. Sin embargo, se recomienda utilizarla con moderación y siguiendo buenas prácticas de diseño de código, ya que un uso excesivo o incorrecto puede dificultar la comprensión  del código."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Poliza:\n",
+    "    def __init__(self, monto):\n",
+    "        self.monto = monto\n",
+    "\n",
+    "    def __add__(self, otro):\n",
+    "        return Poliza(self.monto + otro.monto)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Póliza con monto asegurado: ${self.monto}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = Poliza(100000)\n",
+    "p2 = Poliza(200000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p3 = p1 + p2  \n",
+    "print(p3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparaciones: `__lt__, __gt__, __eq__` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `__eq__(self, other):` Define el comportamiento para el operador de igualdad (`==`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Seguro:\n",
+    "    def __init__(self, titular, monto):\n",
+    "        self.titular = titular\n",
+    "        self.monto = monto\n",
+    "\n",
+    "    def __lt__(self, otro):\n",
+    "        return self.monto < otro.monto\n",
+    "\n",
+    "    def __gt__(self, otro):\n",
+    "        return self.monto > otro.monto\n",
+    "\n",
+    "    def __eq__(self, otro):\n",
+    "        return self.monto == otro.monto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'prima'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/557375114.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSeguro\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Carlos\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m250000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSeguro\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"María\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'prima'"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = Seguro(\"Carlos\", 250000)\n",
+    "s2 = Seguro(\"María\", 300000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 's1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/3077501237.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 's1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1 < s2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 's1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/3941912470.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 's1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1 > s2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(s1 == s2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexación: `__getitem__` "
    ]
   },
   {
