--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -2284,17 +2284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Seguro de Ana López: Monto asegurado $300000, Prima anual $1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seguro1 = Seguro(\"Ana López\", 300000, 1000)\n",
     "print(seguro1)  "
@@ -2304,7 +2296,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos para operar matemáticamente"
+    "### Representación \n",
+    "\n",
+    "Se usa cuando se quiere imprimir el objeto de forma legible.\n",
+    "\n",
+    "* `__str__(self):` Define la representación del objeto usada por `print()` y `str()`.  \n",
+    "  \n",
+    "* `__repr__(self):` Define la representación oficial del objeto usada por `repr()`.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Poliza:\n",
+    "    def __init__(self, monto):\n",
+    "        self.monto = monto\n",
+    "\n",
+    "    def __add__(self, otro):\n",
+    "        return Poliza(self.monto + otro.monto)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Póliza con monto asegurado: ${self.monto}\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = Poliza(100000)\n",
+    "p2 = Poliza(200000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observación:** La posibilidad de definir cuál será el comportamiento de los operadores básicos (como `+`, `-`, `*`, `/`), se llama ***sobrecarga de operadores***."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operadores Aritméticos"
    ]
   },
   {
@@ -2323,26 +2386,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ya hemos visto un método que permitía restar dos puntos. Si bien esta implementación es perfectamente válida, no es posible usar esa función para realizar una resta con el operador `-`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = Punto(1,3)\n",
-    "q = Punto(1,10)\n",
-    "\n",
-    "print(p-q)"
+    "* `__add__(self, other):` Define el comportamiento para el operador de suma (`+`).  \n",
+    "  \n",
+    "* `__sub__(self, other):` Define el comportamiento para el operador de resta (`-`).  \n",
+    "  \n",
+    "* `__mul__(self, other):` Define el comportamiento para el operador de multiplicación (`*`).  \n",
+    "  \n",
+    "* `__truediv__(self, other):` Define el comportamiento para el operador de división (`/`).  \n",
+    "  \n",
+    "* `__floordiv__(self, other):` Define el comportamiento para el operador de división entera (`//`).  \n",
+    "  \n",
+    "* `__mod__(self, other):` Define el comportamiento para el operador de módulo (`%`).  \n",
+    "  \n",
+    "* `__pow__(self, other):` Define el comportamiento para el operador de potencia (`**`).  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si queremos que este operador (o el equivalente para la suma) funcione, será necesario implementar algunos métodos especiales."
+    "La sobrecarga de operadores proporciona flexibilidad y permite que tus clases personalizadas se comporten de manera más intuitiva cuando se utilizan con operadores estándar. Sin embargo, se recomienda utilizarla con moderación y siguiendo buenas prácticas de diseño de código, ya que un uso excesivo o incorrecto puede dificultar la comprensión  del código."
    ]
   },
   {
@@ -2444,16 +2507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Representación en string: __str__\n",
-    "\n",
-    "Se usa cuando se quiere imprimir el objeto de forma legible."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Ejemplo"
+    "### Ejemplo"
    ]
   },
   {
@@ -2462,16 +2516,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Poliza:\n",
-    "    def __init__(self, monto):\n",
-    "        self.monto = monto\n",
+    "import math\n",
+    "\n",
+    "class Vector:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
     "\n",
     "    def __add__(self, otro):\n",
-    "        return Poliza(self.monto + otro.monto)\n",
+    "        return Vector(self.x + otro.x, self.y + otro.y)\n",
+    "\n",
+    "    def __sub__(self, otro):\n",
+    "        return Vector(self.x - otro.x, self.y - otro.y)\n",
+    "\n",
+    "    def __mul__(self, escalar):\n",
+    "        return Vector(self.x * escalar, self.y * escalar)\n",
+    "\n",
+    "    def __eq__(self, otro):\n",
+    "        return self.x == otro.x and self.y == otro.y\n",
+    "\n",
+    "    def magnitud(self):\n",
+    "        return math.sqrt(self.x**2 + self.y**2)\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"Póliza con monto asegurado: ${self.monto}\"\n",
-    "\n"
+    "        return f\"({self.x}, {self.y})\""
    ]
   },
   {
@@ -2480,59 +2548,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = Poliza(100000)\n",
-    "p2 = Poliza(200000)"
+    "v1 = Vector(3, 4)\n",
+    "v2 = Vector(1, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Póliza con monto asegurado: $300000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(p1)"
+    "print(v1 + v2)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**Observación:** La posibilidad de definir cuál será el comportamiento de los operadores básicos (como `+`, `-`, `*`, `/`), se llama ***sobrecarga de operadores***."
+    "print(v1 - v2)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "###  Operadores `+,-,*,/, == `"
+    "print(v1 * 3)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "* `__add__(self, other):` Define el comportamiento para el operador de suma (`+`).\n",
-    "  \n",
-    "* `__sub__(self, other):` Define el comportamiento para el operador de resta (`-`).\n",
-    "  \n",
-    "* `__mul__(self, other):` Define el comportamiento para el operador de multiplicación `(*`).\n",
-    "  \n",
-    "* `__truediv__(self, other):` Define el comportamiento para el operador de división (`/`)."
+    "print(v1.magnitud())"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "La sobrecarga de operadores proporciona flexibilidad y permite que tus clases personalizadas se comporten de manera más intuitiva cuando se utilizan con operadores estándar. Sin embargo, se recomienda utilizarla con moderación y siguiendo buenas prácticas de diseño de código, ya que un uso excesivo o incorrecto puede dificultar la comprensión  del código."
+    "print(v1 == Vector(3, 4))"
    ]
   },
   {
@@ -2544,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2561,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2583,26 +2645,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparaciones: `__lt__, __gt__, __eq__` "
+    "### Comparaciones"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* `__eq__(self, other):` Define el comportamiento para el operador de igualdad (`==`)."
+    "* `__eq__(self, other):` Define el comportamiento para el operador de igualdad (`==`).\n",
+    "\n",
+    "*  `__eq__(self, other)` Define el comportamiento del operador `==`.\n",
+    "\n",
+    "*  `__ne__(self, other)` Define el comportamiento del operador `!=`.\n",
+    "\n",
+    "*  `__lt__(self, other)` Define el comportamiento del operador `<`.\n",
+    "\n",
+    "*  `__le__(self, other)` Define el comportamiento del operador `<=`.\n",
+    "\n",
+    "*  `__gt__(self, other)` Define el comportamiento del operador `>`.\n",
+    "\n",
+    "*  `__ge__(self, other)` Define el comportamiento del operador `>=`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo"
+    "#### Ejemplo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2623,21 +2697,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'prima'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/557375114.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSeguro\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Carlos\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m250000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSeguro\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"María\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'prima'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s1 = Seguro(\"Carlos\", 250000)\n",
     "s2 = Seguro(\"María\", 300000)"
@@ -2645,42 +2707,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/3077501237.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 's1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(s1 < s2) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/3941912470.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 's1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(s1 > s2) "
    ]
@@ -2698,7 +2736,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Indexación: `__getitem__` "
+    "### Acceso a Elementos "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `__getitem__(self, key):` Permite acceder a elementos con `objeto[key]`.  \n",
+    "  \n",
+    "* `__setitem__(self, key, value):` Permite asignar valores con `objeto[key] = valor`.  \n",
+    "  \n",
+    "* `__delitem__(self, key):` Permite eliminar elementos con `del objeto[key]`.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agenda:\n",
+    "    def __init__(self):\n",
+    "        self.contactos = {}\n",
+    "\n",
+    "    def __getitem__(self, nombre):\n",
+    "        return self.contactos.get(nombre, \"No encontrado\")\n",
+    "\n",
+    "    def __setitem__(self, nombre, telefono):\n",
+    "        self.contactos[nombre] = telefono"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Agenda' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/1685255017.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0magenda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAgenda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0magenda\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Juan\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"123456789\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Agenda' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "agenda = Agenda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agenda[\"Juan\"] = \"123456789\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(agenda[\"Juan\"])  \n",
+    "print(agenda[\"Ana\"]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Definir longitud: __len__\n",
+    "Permite usar len(objeto) para calcular la longitud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SeguroAnual:\n",
+    "    def __init__(self, años):\n",
+    "        self.años = años\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.años\n",
+    "\n",
+    "# Uso\n",
+    "seguro3 = SeguroAnual(10)\n",
+    "print(len(seguro3))  # Output: 10\n"
    ]
   },
   {
