--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -2155,22 +2155,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Un método para mostrar objetos"
+    "## Representación de objetos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para mostrar objetos, Python indica que hay que agregarle a la clase un método especial, llamado `__str__` que debe devolver una cadena de caracteres con lo que queremos mostrar. Ese método se invoca cada vez que se llama a la función `str`\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El método `__str__` tiene un solo parámetro, self."
+    "Para definir la representación de un objeto como cadena de texto, podemos usar los métodos `__str__`  y `__repr__`. \n",
+    "\n",
+    "\n",
+    "* `__str__(self):` Define la representación del objeto usada por `print()` y `str()`.  \n",
+    "  \n",
+    "* `__repr__(self):` Define la representación oficial del objeto usada por `repr()`.  "
    ]
   },
   {
@@ -2279,7 +2276,10 @@
     "        self.prima = prima\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"Seguro de {self.titular}: Monto asegurado ${self.monto}, Prima anual ${self.prima}\"\n"
+    "        return f\"Seguro de {self.titular}: Monto asegurado ${self.monto}, Prima anual ${self.prima}\"\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Seguro('{self.titular}', {self.monto}, {self.prima})\""
    ]
   },
   {
@@ -2293,24 +2293,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Representación \n",
-    "\n",
-    "Se usa cuando se quiere imprimir el objeto de forma legible.\n",
-    "\n",
-    "* `__str__(self):` Define la representación del objeto usada por `print()` y `str()`.  \n",
-    "  \n",
-    "* `__repr__(self):` Define la representación oficial del objeto usada por `repr()`.  \n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "repr(seguro1) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2367,7 +2356,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Sobrecarga de Operadores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La sobrecarga de operadores proporciona flexibilidad y permite que tus clases personalizadas se comporten de manera más intuitiva cuando se utilizan con operadores estándar. Sin embargo, se recomienda utilizarla con moderación y siguiendo buenas prácticas de diseño de código, ya que un uso excesivo o incorrecto puede dificultar la comprensión  del código."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Operadores Aritméticos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos definir el comportamiento de los operadores matemáticos implementando métodos especiales."
    ]
   },
   {
@@ -2399,13 +2409,6 @@
     "* `__mod__(self, other):` Define el comportamiento para el operador de módulo (`%`).  \n",
     "  \n",
     "* `__pow__(self, other):` Define el comportamiento para el operador de potencia (`**`).  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La sobrecarga de operadores proporciona flexibilidad y permite que tus clases personalizadas se comporten de manera más intuitiva cuando se utilizan con operadores estándar. Sin embargo, se recomienda utilizarla con moderación y siguiendo buenas prácticas de diseño de código, ya que un uso excesivo o incorrecto puede dificultar la comprensión  del código."
    ]
   },
   {
@@ -2743,11 +2746,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Estos métodos permiten tratar nuestros objetos como si fueran listas o diccionarios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* `__getitem__(self, key):` Permite acceder a elementos con `objeto[key]`.  \n",
     "  \n",
     "* `__setitem__(self, key, value):` Permite asignar valores con `objeto[key] = valor`.  \n",
     "  \n",
-    "* `__delitem__(self, key):` Permite eliminar elementos con `del objeto[key]`.  "
+    "* `__delitem__(self, key):` Permite eliminar elementos con `del objeto[key]`. \n",
+    " "
    ]
   },
   {
@@ -2799,8 +2810,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Definir longitud: __len__\n",
-    "Permite usar len(objeto) para calcular la longitud."
+    "###  Definir longitud de objetos\n",
+    "\n",
+    "El método `__len__` permite definir el comportamiento de `len(objeto)`. "
    ]
   },
   {
@@ -2812,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2835,21 +2847,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'seguro3' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_62050/3490014383.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseguro3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'seguro3' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(seguro3))  "
    ]
@@ -2858,34 +2858,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos en Python: instancia, clase y estáticos"
+    "## Métodos en Python: *instancia*, *clase* y *estáticos*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En Python, hay diferentes tipos de métodos que se utilizan en las clases. Estos métodos tienen propósitos y características específicas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pues bien, haciendo uso de los `decoradores`, es posible crear diferentes tipos de métodos:\n",
+    "En Python, existen diferentes tipos de métodos dentro de las clases, cada uno con un propósito específico. Utilizando los decoradores, podemos definir los siguientes tipos de métodos:\n",
     "\n",
-    "* **Métodos de instancia**: los que ya hemos visto.\n",
-    "  \n",
-    "* **Métodos de clase**: usando el decorador `@classmethod`\n",
-    "  \n",
-    "* **métodos estáticos**: usando el decorador `@staticmethod`"
+    "* **Métodos de instancia:** Métodos comunes que operan sobre una instancia de la clase.\n",
+    "\n",
+    "* **Métodos de clase:** Se definen con `@classmethod` y operan sobre la clase en sí.\n",
+    "\n",
+    "* **Métodos estáticos:** Se definen con `@staticmethod` y no dependen ni de la instancia ni de la clase."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En la siguiente clase tenemos un ejemplo donde definimos los tres tipos de métodos."
+    "A continuación, se muestra una clase que ejemplifica los tres tipos de métodos"
    ]
   },
   {
@@ -2918,20 +2911,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los **métodos de instancia** son los métodos más comunes en Python y se definen dentro de una clase. Estos métodos reciben automáticamente el parámetro `self`, que hace referencia a la instancia del objeto  que llama al método. También pueden recibir otros argumentos como entrada."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Los métodos de instancia:\n",
+    "Los **métodos de instancia** son los métodos más comunes en Python y se definen dentro de una clase. Estos métodos reciben automáticamente el parámetro `self`, que hace referencia a la instancia del objeto que llama al método. Estos métodos también pueden recibir otros parámetros y pueden:\n",
     "\n",
     "* Pueden **acceder y modificar los atributos del objeto**.\n",
     "  \n",
-    "* Pueden **acceder a otros métodos**.\n",
-    "<!--   \n",
-    "* Dado que desde el objeto self se puede acceder a la clase con ` self.class`, también pueden modificar el estado de la clase -->"
+    "* Pueden **acceder a otros métodos**."
    ]
   },
   {
@@ -2948,9 +2932,7 @@
    "outputs": [],
    "source": [
     "class Clase:\n",
-    "    \n",
     "    x = 'atributo de clase'\n",
-    "    \n",
     "    \n",
     "    def metodo(self):\n",
     "        return \"Método normal\""
@@ -2977,14 +2959,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos de clase (classmethod)"
+    "## Métodos de clase (`@classmethod`)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los **métodos de clase** son métodos que se definen dentro de una clase y reciben automáticamente el parámetro `cls`, que hace referencia a la clase en sí misma en lugar de una instancia específica. Pueden acceder y modificar los atributos de la clase. En general, pueden acceder a la clase pero no a la instancia. Se definen utilizando el decorador @`classmethod` antes de la definición del método. "
+    " Se utilizan para acceder y modificar atributos de la clase."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los **métodos de clase** operan sobre la clase en lugar de una instancia y reciben `cls` como primer parámetro. Se utilizan para acceder y modificar atributos de la clase. \n",
+    "\n",
+    "\n",
+    "Se definen utilizando el decorador @`classmethod` antes de la definición del método. "
    ]
   },
   {
@@ -3004,7 +2996,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los métodos de clase:\n",
+    "En general, los métodos de clase:\n",
     "\n",
     "* **No pueden acceder a los atributos de la instancia**.\n",
     "  \n",
@@ -3268,6 +3260,17 @@
    "outputs": [],
    "source": [
     "Ejemplo.metodo_de_clase()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Tipo de Método  | Usa `self` | Usa `cls` | Accede a atributos de instancia | Accede a atributos de clase |\n",
+    "|----------------|------------|------------|--------------------------------|--------------------------------|\n",
+    "| Instancia      | ✓          | ✗          | ✓                              | ✗                              |\n",
+    "| Clase         | ✗          | ✓          | ✗                              | ✓                              |\n",
+    "| Estático      | ✗          | ✗          | ✗                              | ✗                              |\n"
    ]
   },
   {
