--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -2858,6 +2858,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ejercicio\n",
+    "\n",
+    "**Ejercicio 1.**\n",
+    "\n",
+    "Define una clase llamada `Articulo` que represente un producto con las siguientes características:\n",
+    "- Debe tener un constructor que reciba dos parámetros: `id_articulo` y `precio`.\n",
+    "- Cada instancia de la clase `Articulo` debe tener los atributos `id_articulo` y `precio` con los valores proporcionados al momento de su creación.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ejercicio 2.** \n",
+    "\n",
+    "Crea cinco instancias de la clase `Articulo`, asignándoles identificadores únicos y precios de tu elección. Los objetos deben llamarse: `articulo1, articulo2, articulo3, articulo4, articulo5`\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ejercicio 3.** \n",
+    "\n",
+    "Define una clase `Inventario` que almacene y administre artículos con las siguientes características:\n",
+    "\n",
+    "1. Su constructor debe inicializar un diccionario llamado `inventario` donde:\n",
+    "   - Las claves sean los identificadores (`id_articulo`) de los artículos.\n",
+    "   - Los valores representen la cantidad de unidades disponibles.\n",
+    "\n",
+    "2. Debe incluir un método `agregar_articulo(id_articulo, cantidad=1)` que permita añadir una cantidad específica de unidades de un artículo al inventario. Si el artículo ya existe, debe aumentar la cantidad disponible.\n",
+    "\n",
+    "3. Debe incluir un método `eliminar_articulo(id_articulo, cantidad=1)` que reduzca la cantidad de unidades de un artículo. Antes de eliminar, debe verificar:\n",
+    "   - Si hay suficientes unidades disponibles. Si no, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     No hay suficientes unidades del artículo {id_articulo} en existencia.\n",
+    "     ```\n",
+    "   - Si el artículo está registrado pero con 0 unidades, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     No se tiene disponibilidad del artículo {id_articulo} en el inventario.\n",
+    "     ```\n",
+    "   - Si el artículo no está registrado, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     No se tiene registro del artículo {id_articulo} en el inventario.\n",
+    "     ```\n",
+    "\n",
+    "4. Debe incluir un método `mostrar_articulos_disponibles()` que muestre un DataFrame con los artículos y sus cantidades en existencia. Las columnas deben llamarse \"Artículo\" y \"Existencia\", y los índices deben comenzar desde 1.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ejercicio 4.** \n",
+    "\n",
+    "Crea una instancia de `Inventario` llamada `inventario` y realiza las siguientes operaciones:\n",
+    "- Agrega una unidad de `articulo1`, `articulo2`, `articulo3`, `articulo4` y `articulo5`.\n",
+    "- Agrega 10 unidades más de `articulo3`.\n",
+    "- Agrega 5 unidades más de `articulo1`.\n",
+    "- Agrega 20 unidades de un nuevo artículo `articulo6`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ejercicio 5.** (2.5 puntos)\n",
+    "\n",
+    "Define una clase `CarritoCompras` que represente un carrito de compras con las siguientes características:\n",
+    "\n",
+    "1. Su constructor debe recibir un objeto `Inventario` y:\n",
+    "   - Guardarlo en un atributo `inventario`.\n",
+    "   - Inicializar un diccionario `carrito` para almacenar los artículos añadidos. Las claves serán `id_articulo` y los valores la cantidad en el carrito.\n",
+    "\n",
+    "2. Debe incluir un método `agregar_articulo(id_articulo, cantidad=1)` que agregue unidades de un artículo al carrito, verificando:\n",
+    "   - Si hay suficiente stock en el inventario. Si no, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     No se cuenta con esa cantidad de unidades del artículo {id_articulo} en el inventario.\n",
+    "     ```\n",
+    "   - Si no hay unidades disponibles, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     El artículo {id_articulo} no se encuentra disponible.\n",
+    "     ```\n",
+    "   - Si el artículo no está registrado, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     No se tiene registro del artículo {id_articulo} en el inventario.\n",
+    "     ```\n",
+    "\n",
+    "3. Debe incluir un método `eliminar_articulo(id_articulo, cantidad=1)` que reduzca unidades del carrito, verificando:\n",
+    "   - Si hay suficientes unidades en el carrito. Si no, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     No se tiene esa cantidad de unidades del artículo {id_articulo} en el carrito.\n",
+    "     ```\n",
+    "   - Si el artículo no está en el carrito, mostrar:\n",
+    "     \n",
+    "     ```\n",
+    "     El artículo {id_articulo} no se encuentra en el carrito.\n",
+    "     ```\n",
+    "\n",
+    "4. Debe incluir un método `mostrar_articulos()` que muestre un DataFrame con los artículos en el carrito y sus cantidades. Las columnas deben llamarse \"Artículo\" y \"Cantidad\", y los índices deben comenzar desde 1.\n",
+    "\n",
+    "5. Debe incluir un método `total()` que calcule el precio total de los artículos en el carrito.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ejercicio 6.** \n",
+    "\n",
+    "Crea una instancia de `CarritoCompras` llamada `carrito_compras` y agrega:\n",
+    "- 1 unidad de `articulo1`.\n",
+    "- 2 unidades de `articulo2`.\n",
+    "- 5 unidades de `articulo5`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ejercicio 7.** \n",
+    "\n",
+    "Modifica la clase `Articulo` para que implemente la sobrecarga del operador `+`. Debe permitir sumar el precio de dos artículos y devolver un nuevo artículo con un identificador compuesto y el precio resultante.\n",
+    "\n",
+    "Ejemplo de uso:\n",
+    "```python\n",
+    "articulo1 = Articulo(\"A001\", 50)\n",
+    "articulo2 = Articulo(\"A002\", 30)\n",
+    "articulo3 = articulo1 + articulo2\n",
+    "print(articulo3.id_articulo)  # \"A001+A002\"\n",
+    "print(articulo3.precio)  # 80\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Métodos en Python: *instancia*, *clase* y *estáticos*"
    ]
   },
