--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -2916,7 +2916,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ejercicio 5.** (2.5 puntos)\n",
+    "**Ejercicio 5.** \n",
     "\n",
     "Define una clase `CarritoCompras` que represente un carrito de compras con las siguientes características:\n",
     "\n",
